Fixed hamburger button for navbar on mobile phones (was working fine on emulator but not on actual phone)

--- a/app/Components/Navbar/navbar.css
+++ b/app/Components/Navbar/navbar.css
@@ -104,11 +104,8 @@
 }
 
 .hamburger {
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-
-    width: 28px;
+    margin: 2%;
+    width: 30px;
     height: 20px;
 
     background: none;
@@ -118,19 +115,29 @@
 }
 
 .hamburger span {
+    position: absolute;
     height: 2px;
     width: 100%;
     background: white;
     transition: 0.5s;
 }
-.hamburger.open span:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
+
+.hamburger span:nth-child(1) {
+    transform: translateY(-8px);
 }
-.hamburger.open span:nth-child(2) {
+
+.hamburger span:nth-child(3) {
+    transform: translateY(8px);
+}
+
+.hamburger-open span:nth-child(1) {
+    transform: translateY(0) rotate(45deg);
+}
+.hamburger-open span:nth-child(2) {
     opacity: 0;
 }
-.hamburger.open span:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
+.hamburger-open span:nth-child(3) {
+    transform: translateY(0) rotate(-45deg);
 }
 
 @media (max-width: 900px) {
